--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<head>
+  <meta charset="utf-8">
+  <meta name= "desciption" content="Professional Translation Services - Your message, nuance, and soul are at best an echo in my translation production.">
+  <title>Professional Arabic Translator</title>
+</head>
+
+<body>
 <h1>Hello World</h1>
+
+  
+  
+  <script src=""></script>
+</body>
