--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
   <meta charset="utf-8">
   <meta name= "desciption" content="Professional Translation Services - Your message, nuance, and soul are at best an echo in my translation production.">
   <title>Professional Arabic Translator</title>
+  <style>
+    .italic
+    {font-weight: italic}
+    
+  </style>
 </head>
 
 <body align="center">
-  <p><b>I am</b></p><br />
+  <p><b>I am</b></p>
 <h1>Allam Zedan</h1>
 <br /><br />
-<br />
-<br />
 <img src="https://4.bp.blogspot.com/-dq1LT--uhXI/WsxPHJ4X2dI/AAAAAAAAJkc/7PSQ_ZkjF046y0AhRo7TCV2PMOPKwsnOACLcBGAs/s640/000.jpg" hight="200" width="200" alt="Professional Arabic Translator" title="Allam Zedan">
  
 <p>Need an expert for your translation project; ensuring its content is flawless and appealing to readers? I am offering a wealth of experience. I strive for complete accuracy and the highest degree of professionalism in the work I complete.</p>
@@ -19,14 +22,12 @@
           <p>My services include:</p>
             <ul>
                 <li>Translation</li>
-                <img src="images/transal.png" alt="Arabic-English Translation Services" title="Arabic English">
                 <li>Editing</li>
-                <li><a href="http://www.allamzedan.com">Subtitling</a></li>
+                <li>Subtitling</li>
                 <li>Transcription</li>
             </ul>
         <h3>Benefits</h3>
         <p>Using our services, you will get:</p>
-        <img src="images/marhaba.jpg" hight=100 width=150>
             <ol type="A">
                 <li>High Quality</li>
                 <li>Competetive Rates</li>
