--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <title>Professional Arabic Translator</title>
   <style>
     .italic
-    {font-weight: italic}
-    
+    {font-weight: italic;}
+    body
+    {text-align: center;}
   </style>
 </head>
 
