--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   </style>
 </head>
 
-<body align="center">
+<body>
+  
   <p><b>I am</b></p>
 <h1>Allam Zedan</h1>
 <br /><br />
@@ -20,7 +21,7 @@
 <p>Need an expert for your translation project; ensuring its content is flawless and appealing to readers? I am offering a wealth of experience. I strive for complete accuracy and the highest degree of professionalism in the work I complete.</p>
   
 
-          <p>My services include:</p>
+           <h3>My services include:</h3>
             <ul>
                 <li>Translation</li>
                 <li>Editing</li>
