--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <img src="http://www.stonemarkimpressions.com/underconstruction.jpg" alt="Hla 7lween. A7la shabab Gaza Sky Geeks.>
   <br /><br /><br /><br /><br /><br /><br /><br />
-  <p>Alternatively please visit <a href="http://allamzedan.blogspot.com" target="_blank">my personal blog</a></p>
+  <a href="http://allamzedan.blogspot.com" target="_blank">my personal blog</a>
   <p>You can also visit my profiles on: <a href="https://www.freecodecamp.org/allamzedan" target="_blank"><img src="http://www.stickpng.com/assets/images/5847f91ccef1014c0b5e48b8.png" hight="100" width="100"></a>, <a href="https://github.com/allamzedan/arabic-translator" target="_blank"><img src="https://png.icons8.com/metro/1600/github.png" hight="100" width="100"></a>, , <a href="https://www.codewars.com/users/allamzedan" target="_blank"><img src="https://www.codewars.com/assets/logos/logo-square-red-big-dc2f35502ee2b60882a41327c529521c.png" hight="100" width="100"></a>
   <br />
   
