--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Professional Arabic Translator</title>
   <style>
     .italic
-    {font-weight: italic; color:red;}
+    {font-style: italic; color:red;}
     body
     {text-align: center;}
   </style>
@@ -14,12 +14,14 @@
 <body>
   
   <img src="http://www.stonemarkimpressions.com/underconstruction.jpg" alt="Hla 7lween. A7la shabab Gaza Sky Geeks.">
-  <br /><br /><br /><br /><br /><br /><br /><br />
+  <br />
   <p class="italic">Alternatively please visit <a href="https://allamzedan.blogspot.com" target="_blank">my personal blog</a></p>
   <p>You can also visit my profiles on: <a href="https://www.freecodecamp.org/allamzedan" target="_blank"><img src="http://www.stickpng.com/assets/images/5847f91ccef1014c0b5e48b8.png" hight="100" width="100"></a>, <a href="https://github.com/allamzedan/arabic-translator" target="_blank"><img src="https://png.icons8.com/metro/1600/github.png" hight="100" width="100"></a>, , <a href="https://www.codewars.com/users/allamzedan" target="_blank"><img src="https://www.codewars.com/assets/logos/logo-square-red-big-dc2f35502ee2b60882a41327c529521c.png" hight="100" width="100"></a>
   <br />
-  
+  +++
  <br />
+    <br />
+    <br />
   <p><b>I am</b></p>
 <h1>Allam Zedan</h1>
 <br /><br />
@@ -35,7 +37,7 @@
                 <li>Subtitling</li>
                 <li>Transcription</li>
             </ul>
-        <h3>Benefits</h3>
+        <h3>Benefits:</h3>
         <p>Using our services, you will get:</p>
             <ol type="A">
                 <li>High Quality</li>
